...
                android:layout_marginHorizontal="30dp"
                android:text="@string/addPoolSubtitleText"
                app:layout_constraintBottom_toTopOf="@+id/productionEditTextLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMarginInputLayout"
                app:layout_constraintBottom_toTopOf="@+id/passwordEditTextLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/productionInputEditText"
                    style="@style/PoolTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/selectDateTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInputEditText"
                    style="@style/PoolTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
...
                app:endIconDrawable="@drawable/ic_baseline_arrow_drop_down_24"
                app:endIconMode="custom"
                app:layout_constraintBottom_toTopOf="@+id/selectStartTimeTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/selectDateAutoComplete"
                    style="@style/PoolTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
...
                app:endIconDrawable="@drawable/ic_baseline_arrow_drop_down_24"
                app:endIconMode="custom"
                app:layout_constraintBottom_toTopOf="@+id/selectBetAmountTextInputLayout"
                app:layout_constraintEnd_toStartOf="@id/selectBettingCloseTimeTextInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectDateTextInputLayout"
...

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/selectStartTimeAutoComplete"
                    style="@style/PoolTextInputInnerFieldStyle"
                    getTimeFromDate="@{viewModel.poolStartTime}"
...

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/selectBettingCloseTimeAutoComplete"
                    style="@style/PoolTextInputInnerFieldStyle"
                    getTimeFromDate="@{viewModel.poolBetLockTime}"
...
                app:endIconDrawable="@drawable/ic_baseline_arrow_drop_down_24"
                app:endIconMode="custom"
                app:layout_constraintBottom_toTopOf="@+id/pIRCheckbox"
                app:layout_constraintEnd_toStartOf="@id/selectMarginTextInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectStartTimeTextInputLayout"
...

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/selectBetAmountAutoComplete"
                    style="@style/PoolTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
...

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/selectMarginAutoComplete"
                    style="@style/PoolTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
...
                android:text="@string/priceIsRightRules"
                android:textColor="@color/textTitleColor"
                app:layout_constraintBottom_toTopOf="@id/buttonLinearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectBetAmountTextInputLayout"
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/createButton"
                    style="@style/MainBlueButtonStyle"
                    setPoolEnabledArg1="@{viewModel.poolProduction}"
...
