<resources>
    <string name="app_name">Wrap Roulette</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
...
    <string name="logout">Logout</string>
    <string name="join_pool">Join Pool</string>
    <string name="new_pool">New Pool</string>
    <string name="pools">Your Pools</string>
    <string name="account">Account</string>
    <string name="add_member">Add Member</string>
    <string name="edit_pool">Edit Pool</string>
    <string name="leave_pool">Leave Pool</string>
    <string name="membersHeaderTitle">Members</string>
    <string name="finalBetsHeaderTitle">Final Bets</string>
    <string name="betsHeaderTitle">Bets</string>
    <string name="administratorHeaderTitle">Administrator</string>
    <string name="currentTimeTitle">Current Time</string>
...
    <string name="currentBetTitle">Current Bet</string>
    <string name="memberBidsTitle">Member Bids</string>
    <string name="marginHeaderTitle">Margin</string>
    <string name="adminHeaderTitle">Admin</string>
    <string name="totalPotHeaderTitle">Total Pot</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="clickToSignUp">Not registered? Click to signup</string>
    <string name="signIn">Sign In</string>
    <string name="typeYourPassword">Type your password</string>
    <string name="typeYourEmail">Type your email</string>
    <string name="roulette">Roulette</string>
    <string name="wrap">Wrap</string>
    <string name="logoHeaderImage">Logo header image</string>
    <string name="resetPasswordTitle">Reset Password</string>
    <string name="resetPasswordSubtitle">Enter your email address to reset your password.</string>
    <string name="reset">Reset</string>
    <string name="backButtonDescription">Back image</string>
    <string name="signUpTitle">Sign Up</string>
    <string name="signUpSubtitle">Enter your details to register</string>
    <string name="typeYourName">Type your name</string>
    <string name="enterYourDepartment">Enter your department</string>
    <string name="signUp">Sign Up</string>
    <string name="productionName">Production</string>
    <string name="poolPassword">Password</string>
    <string name="date">Date</string>
    <string name="join">Join</string>
    <string name="startTime">Start time</string>
    <string name="finalBets">Final bets</string>
    <string name="price">Price</string>
    <string name="margin">Margin</string>
    <string name="priceIsRightRules">Price Is Right Rules</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="department">Department</string>
    <string name="email">Email</string>
    <string name="joinPoolHeaderImage">Join pool header image</string>
    <string name="joinPoolSubtitle">Enter the details of the pool you wish to join. Inputs are case sensitive.</string>
    <string name="addPoolSubtitleText">Create a new pool below. Users can join using the name, password and date inputs.</string>
...
    <string name="editTempMemberDialogMessage">Edit %s\'s member details.</string>
    <string name="addMemberDialogTitle">Add Member</string>
    <string name="editMemberDialogTitle">Edit Member</string>
    <string name="totalWinningsTitle">Total Winnings</string>
    <string name="totalPoolsTitle">Total Pools</string>
    <string name="totalBetsTitle">Total Bets</string>
    <string name="actions">Actions</string>
    <string name="createPoolFabDescription">Create pool fab</string>
    <string name="joinPoolFabDescription">Join pool fab</string>
    <string name="noSavedPoolsText">No Saved Pools</string>
    <string name="poolStatusImageDescription">Pool status image</string>
    <string name="poolAdminImageDescription">Pool admin image</string>
    <string name="poolLoadedImageDescription">Pool loaded image</string>
    <string name="tempMemberIconDescription">Temporary member icon</string>
...
    <string name="enterDepartmentErrorMessage">Please enter your department.</string>
    <string name="savedSuccessfullyMessage">Saved Successfully!</string>
    <string name="noNetworkUpdateDelayMessage">Unable to connect to network, your changes will apply when reconnected.</string>
    <string name="poolFinishedCantUpdateMemberMessage">This pool has finished, you are unable to make changes at this time.</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="bettingLockedPoolActiveCantRemoveMemberMessage">Betting has locked and pool is still active, you are unable to remove this member at this time.</string>
    <string name="clearBetBeforeLeavingMessage">You need to clear your bet before leaving this pool.</string>
    <string name="unableRemoveMemberMessage">You are unable to remove this member at this time.</string>
    <string name="setMembersBetDialogSubtitle">Set %s\'s bid time using the spinner below.</string>
    <string name="clear">Clear</string>
    <string name="areYouSureDialogTitle">Are You Sure?</string>
...
    <string name="unableToEditPool">You Are Unable To Edit This Pool</string>
    <string name="summary">Summary</string>
    <string name="bids">Bids</string>
    <string name="deletePoolConfirmDialogSubtitle">You are about to delete this pool. Click Yes to continue or No to cancel.</string>
    <string name="pirInfoDialogSubtitle">“The Price Is Right” rules designate a winner with the closest bet time to the wrap time without going over. \n\n *Exception if margins apply.</string>
    <string name="pirInfoDialogTitle">Price Is Right Rules</string>
    <string name="set">Set</string>
    <string name="startTimeDialogTitle">Start Time</string>
    <string name="lockBettingDialogTitle">Lock Betting</string>
    <string name="startTimeDialogSubtitle">Set the pools start time according to the call sheet.</string>
    <string name="lockBettingDialogSubtitle">At this time no additional bets can be made and are final.</string>
    <string name="enterProductionNameErrorMessage">Please Enter Production Name</string>
    <string name="enterPoolDateErrorMessage">Please Enter Pool Date</string>
...
