...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="hideKeyboard">

            <ImageView
                android:id="@+id/backButton"
                style="@style/BackButton"
                android:contentDescription="@string/backButtonDescription"
                android:onClick="@{() -> viewModel.navigateBack()}"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
...
                android:id="@+id/signUpSubtitle"
                style="@style/LoginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUpSubtitle"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/nameEditTextLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/signUpTitle"
                app:layout_constraintTop_toBottomOf="@+id/signUpTitle" />


...
                style="@style/LoginTextInputOuterFieldStyle"
                error="@{ viewModel.errorNameText }"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/login_horizontal_margin"
                android:layout_marginTop="40dp"
                app:layout_constraintBottom_toTopOf="@+id/emailEditTextLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpSubtitle"
                app:startIconDrawable="@drawable/ic_baseline_person_outline_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameInputEditText"
                    style="@style/LoginTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/typeYourName"
                    android:inputType="textCapWords"
                    android:onTextChanged="@{() -> viewModel.clearErrorHelperText(Constants.NAME_ERROR)}"
...
                style="@style/LoginTextInputOuterFieldStyle"
                error="@{ viewModel.errorEmailText }"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/login_horizontal_margin"
                android:layout_marginTop="4dp"
                app:layout_constraintBottom_toTopOf="@+id/departmentEditTextLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout"
                app:startIconDrawable="@drawable/ic_outline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInputEditText"
                    style="@style/LoginTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/typeYourEmail"
                    android:inputType="textEmailAddress"
                    android:onTextChanged="@{() -> viewModel.clearErrorHelperText(Constants.EMAIL_ERROR)}"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
                app:startIconDrawable="@drawable/ic_outline_work_outline_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/departmentInputEditText"
                    style="@style/LoginTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enterYourDepartment"
                    android:inputType="textCapWords"
                    android:onTextChanged="@{() -> viewModel.clearErrorHelperText(Constants.DEPARTMENT_ERROR)}"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/login_horizontal_margin"
                android:layout_marginTop="4dp"
                app:counterEnabled="true"
                app:counterMaxLength="24"
                app:layout_constraintBottom_toTopOf="@+id/signUpButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/departmentEditTextLayout"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_outline_lock_24">

...
